# fastapi_protobuf

./: README.md  fastapi_better_json_client.py  fastapi_better_json_server.py  fastapi_better_mixed_client.py  fastapi_better_mixed_server_asgi.py  fastapi_better_mixed_server_endpoints.py  fastapi_google_json_client.py  fastapi_google_json_models.py  fastapi_google_json_server.py  fastapi_google_string_client.py  fastapi_google_string_server.py  grpc_better_client.py  grpc_better_server.py  grpc_google_client.py  grpc_google_server.py  pyproject.toml
betterproto_pb/school/: __init__.py
google_grpc/: grpc_service_pb2.py  messages_pb2.py  messages_pb2.pyi
google_pb/: grpc_service_pb2_grpc.py  messages_pb2.py
proto/: grpc_service.proto  messages.proto
